# kmap_fastapi_backend

./: .gitignore  pyproject.toml
src/: main.py
src/algorithm/: function.py
src/algorithm/scripts/: build_kmap.py  find_kmap_islands.py  get_minimized_dnf.py  get_pdnf.py  get_truth_table.py
