[tool.poetry]
name = "kmap-fastapi-api"
version = "0.1.0"
description = ""
authors = ["AlexeyGrushev <yablokov2004@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
